--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,21 @@ Legend
 Dates use a YYYY/MM/DD format.
 
 
+Version 1.1.3 (2018/05/14)
+===========
+
+| Note on this release :
+|     Bug fixes
+
+LATEX IMPORT
+
+[#] Fixed issue where cells with \multirow and a negative argument would disappears (#5)
+
+EPLAIN EXPORT
+
+[#] Characters "\" and "~" were not well encoded
+[#] Characters ">" would disappears in the output
+
 Version 1.1.2 (2018/05/10)
 ===========
 
