--- a/changelog.txt
+++ b/changelog.txt
@@ -6,7 +6,7 @@ Legend
 [#] Fixed
 Dates use a YYYY/MM/DD format.
 
-Version 1.6.5 (2019/10/23)
+Version 1.6.5 (2019/10/23).
 ===========
 
 | Note on this release :
