--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,15 @@ Legend
 [#] Fixed
 Dates use a YYYY/MM/DD format.
 
+Version 2.0.3 (2020/10/20)
+==========
+
+| Note on this release:
+|     Bug fixes
+
+LATEX EXPORT
+
+[#] Issue with mathematical expressions inside unordered lists (#31)
 
 Version 2.0.2 (2020/10/08)
 ==========
