--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,20 @@ Legend
 [#] Fixed
 Dates use a YYYY/MM/DD format.
 
+
+Version 2.0.5 (2021/02/26)
+==========
+
+| Note on this release:
+|     Bug fixes for PreTeXt
+
+PRETEXT EXPORT
+
+[/] Use `<title>` tag instead of `<caption>` for captions (#35)
+[#] Non breaking space characters were not correctly encoded (#36)
+[#] Zero-width space characters were not elimited (#36)
+[#] Special characters were not encoded inside captions
+
 Version 2.0.4 (2021/02/17)
 ==========
 
