--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,26 @@ Legend
 [#] Fixed
 Dates use a YYYY/MM/DD format.
 
+Version 2.3.1 (2022/01/02)
+==========
+
+| Note on this release:
+|     Various improvement to importing LaTeX tables
+
+LATEX CORE
+
+[#] Trimmed borders are now larger when using the border editor
+
+LATEX IMPORT
+
+[+] Support for trimmed borders with \cmidrule(lr)
+[+] Support for supertabular, supertabular*, mpsupertabular and mpsupertabular* environments
+[+] Support for tabularew environment
+[+] Support for xtabular* and mpxtabular* environments
+[+] Support for newlines inside cells with two newlines characters
+[#] NiceTabular* environments didn't load
+[#] `~` was not converted to an unbreakable whitespace
+
 Version 2.3 (2021/12/20)
 ==========
 
