--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,16 @@ Legend
 [#] Fixed
 Dates use a YYYY/MM/DD format.
 
+Version 2.3.1.1 (2022/01/03)
+==========
+
+| Note on this release:
+|     Urgent fix
+
+LATEX IMPORT
+
+[#] LaTeX tables could not be imported
+
 Version 2.3.1 (2022/01/02)
 ==========
 
