--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,21 @@ Legend
 [#] Fixed
 Dates use a YYYY/MM/DD format.
 
+Version 2.3.2 (2022/03/31)
+==========
+
+| Note on this release:
+|     Improved tabularray import and pasting plain text
+
+CORE
+
+[+] SHIFT + Paste now paste plain text
+
+LATEX IMPORT
+
+[+] Support for horizontal and vertical borders when importing tabularray tables
+[+] Support for complex odd/even selectors when importing tabularray tables
+
 Version 2.3.1.3 (2022/03/05)
 ==========
 
